updated ReadMEs and selected .ipynb renamed

--- a/train-models/MobileNetV2_Feature_Extraction.ipynb
+++ b/train-models/MobileNetV2_Feature_Extraction.ipynb
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alvaro code start here"
+    "## Generation of the Features starts here"
    ]
   },
   {
